--- a/benchmarking/benchmarking.ipynb
+++ b/benchmarking/benchmarking.ipynb
@@ -408,7 +408,9 @@
    "cell_type": "code",
    "execution_count": 421,
    "id": "db1d939b-67e6-42e6-976a-a237701d9d56",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -27194,7 +27196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
