Added main runner and experiment management system with tests working

--- a/benchmarking/benchmarking.ipynb
+++ b/benchmarking/benchmarking.ipynb
@@ -25475,8 +25475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install pyvcd \n",
-    "from vcd.reader import TokenKind, tokenize"
+    "#!p9999jjjfbgggggbgfbgfgbbgljjjjjjhhhhhhhhhhhhhhhhhhhhhhhhfffffffffhhxxxxx ddddddddvvvvvvgggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggghhhhhhhttttt"
    ]
   },
   {
